--- a/Views/Admin/Course/CourseEdit.html
+++ b/Views/Admin/Course/CourseEdit.html
@@ -8,11 +8,6 @@
     <link rel="stylesheet" href="../../../Css/Admin/Comm.css">
     <link href="../../../Framework/bootstrap-fileinput/css/fileinput.css" media="all" rel="stylesheet" type="text/css"/>
     <style>
-        button {
-            width: 70px;
-            height: 30px
-        }
-
         select {
             height: 40px;
             border: 1px solid #dddddd;
@@ -50,7 +45,7 @@
 <div class="container" style="margin-top: 20px;">
     <div class="row">
         <div class="col-xs-2">课程名称：</div>
-        <div class="col-xs-6"><input type="text" id="CourseName"/></div>
+        <div class="col-xs-6"><input class="input" type="text" id="CourseName"/></div>
     </div>
     <div class="row">
         <div class="col-xs-2">类型：</div>
@@ -67,7 +62,7 @@
     <!--</div>-->
     <div class="row">
         <div class="col-xs-2">学费：</div>
-        <div class="col-xs-6"><input type="text" id="Tuition"/></div>
+        <div class="col-xs-6"><input class="input" type="text" id="Tuition"/></div>
     </div>
     <div class="row">
         <div class="col-xs-2">课程介绍：</div>
