--- a/Views/Admin/Course/CourseList.html
+++ b/Views/Admin/Course/CourseList.html
@@ -8,17 +8,6 @@
     <link rel="stylesheet" href="../../../Css/Admin/Comm.css">
     <style>
 
-
-        select {
-            height: 40px;
-            border: 1px solid #dddddd;
-            border-radius: 5px;
-            width: 100%;
-            padding-left: 5px;
-            padding-right: 5px;
-            outline: none;
-        }
-
         .header {
             background: #efefef;
             font-size: 15px;
@@ -34,7 +23,7 @@
             <h4><strong>课程管理</strong></h4>
         </div>
         <div class="col-xs-6 text-right">
-            <input type="text" style="width: 60%" id="SearchKey" placeholder="请输入搜索关键字" />
+            <input type="text" class="input" style="width: 60%" id="SearchKey" placeholder="请输入搜索关键字"/>
             <button class="button70X30" id="btnSearch">搜 索</button>
             <button class="button70X30" id="btnAdd" onclick="window.location.href='CourseEdit.html'">新 增</button>
         </div>
