--- a/Views/Admin/CourseType/CourseTypeList.html
+++ b/Views/Admin/CourseType/CourseTypeList.html
@@ -54,7 +54,7 @@
     <div class="container" style="width: 500px;margin-top: 20px;">
         <div class="row">
             <div class="col-xs-4">课程类型名称：</div>
-            <div class="col-xs-8"><input type="text" id="CourseTypeName"/></div>
+            <div class="col-xs-8"><input type="text" class="input" id="CourseTypeName"/></div>
         </div>
         <div class="row">
             <div class="col-xs-4">类型：</div>
@@ -67,7 +67,7 @@
         <div class="row">
             <div class="col-xs-9"></div>
             <div class="col-xs-3">
-                <button id="btnSave" style="width: 100%">保 存</button>
+                <button class="button70X30" id="btnSave" style="width: 100%">保 存</button>
             </div>
         </div>
     </div>
