--- a/Views/Admin/Phase/PhaseEdit.html
+++ b/Views/Admin/Phase/PhaseEdit.html
@@ -7,21 +7,6 @@
     <link rel="stylesheet" href="../../../Framework/summernote/summernote.css">
     <link rel="stylesheet" href="../../../Css/Admin/Comm.css">
     <style>
-        button {
-            width: 70px;
-            height: 30px
-        }
-
-        select {
-            height: 40px;
-            border: 1px solid #dddddd;
-            border-radius: 5px;
-            width: 100%;
-            padding-left: 5px;
-            padding-right: 5px;
-            outline: none;
-        }
-
         .header {
             background: #efefef;
             font-size: 15px;
@@ -67,8 +52,8 @@
         }
 
         .laydate-icon {
-            height: 40px!important;
-            line-height: 40px!important;
+            height: 40px !important;
+            line-height: 40px !important;
         }
     </style>
 </head>
@@ -105,7 +90,7 @@
     </div>
     <div class="row">
         <div class="col-xs-2">人数上限：</div>
-        <div class="col-xs-6"><input type="text" id="PeopleCount"/></div>
+        <div class="col-xs-6"><input class="input" type="text" id="PeopleCount"/></div>
     </div>
     <div class="row">
         <div class="col-xs-2">主讲教师：</div>
@@ -129,19 +114,20 @@
     </div>
     <div class="row">
         <div class="col-xs-2">开课地址：</div>
-        <div class="col-xs-6"><input placeholder="地址不选即为待定" type="text" id="Place"/></div>
+        <div class="col-xs-6"><input class="input" placeholder="地址不选即为待定" type="text" id="Place"/></div>
     </div>
     <div class="row">
         <div class="col-xs-2">食宿场地费：</div>
-        <div class="col-xs-6"><input type="text" id="AccommodationCost"/></div>
+        <div class="col-xs-6"><input class="input" type="text" id="AccommodationCost"/></div>
     </div>
     <div class="row">
         <div class="col-xs-2">开始日期：</div>
-        <div class="col-xs-6"><input placeholder="时间不选即为待定" type="text" class="laydate-icon" id="StartTime"/></div>
+        <div class="col-xs-6"><input placeholder="时间不选即为待定" type="text" class="laydate-icon input" id="StartTime"/>
+        </div>
     </div>
     <div class="row">
         <div class="col-xs-2">结束日期：</div>
-        <div class="col-xs-6"><input placeholder="时间不选即为待定" class="laydate-icon" type="text" id="EndTime"/></div>
+        <div class="col-xs-6"><input placeholder="时间不选即为待定" class="laydate-icon input" type="text" id="EndTime"/></div>
     </div>
     <div class="row">
         <div class="col-xs-2">
