--- a/Views/Admin/Teacher/TeacherEdit.html
+++ b/Views/Admin/Teacher/TeacherEdit.html
@@ -8,20 +8,6 @@
     <link rel="stylesheet" href="../../../Css/Admin/Comm.css">
     <link href="../../../Framework/bootstrap-fileinput/css/fileinput.css" media="all" rel="stylesheet" type="text/css"/>
     <style>
-        button {
-            width: 70px;
-            height: 30px
-        }
-
-        select {
-            height: 40px;
-            border: 1px solid #dddddd;
-            border-radius: 5px;
-            width: 100%;
-            padding-left: 5px;
-            padding-right: 5px;
-            outline: none;
-        }
 
         .header {
             background: #efefef;
@@ -50,7 +36,7 @@
 <div class="container" style="margin-top: 20px;">
     <div class="row">
         <div class="col-xs-2">教师姓名：</div>
-        <div class="col-xs-6"><input type="text" id="TeacherName"/></div>
+        <div class="col-xs-6"><input class="input" type="text" id="TeacherName"/></div>
     </div>
     <div class="row">
         <div class="col-xs-2">教师简介：</div>
