--- a/Views/Account/PersonalCenter.html
+++ b/Views/Account/PersonalCenter.html
@@ -7,24 +7,58 @@
     <meta name="format-detection" content="email=no"/>
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
-    <!--<link rel="stylesheet" href="../../Css/Account/Login.css">-->
-
+    <meta charset="UTF-8">
     <title>个人中心</title>
     <style>
-        .pl5 {
-            padding-left: 5px
+
+        .header {
+            position: relative;
         }
 
-        .pr5 {
-            padding-right: 5px
+        .headerImg {
+            position: absolute;
+            top: 40%;
+            left: 50%;
+            margin-top: -30px;
+            margin-left: -30px;
+            width: 60px;
+            height: 60px;
+            border-radius: 30px;
         }
 
-        .pl15 {
+        .integral {
+            position: absolute;
+            top: 80%;
+            left: 50%;
+            width: 200px;
+            margin-left: -100px;
+            color: white;
+            text-align: center;
+            font-size: 14px;
+            margin-bottom: 0px;
+        }
+
+        .name {
+            position: absolute;
+            top: 65%;
+            left: 50%;
+            width: 200px;
+            margin-left: -100px;
+            text-align: center;
+            color: white;
+            font-size: 16px;
+        }
+
+        .left_field {
+            display: block;
             padding-left: 15px;
+            padding-right: 5px;
         }
 
-        .pr15 {
+        .right_field {
+            padding-left: 5px;
             padding-right: 15px;
+            text-align: right;
         }
 
         .border_btm {
@@ -36,32 +70,44 @@
             padding-bottom: 10px;
         }
 
-        .display_block {
-            display: block
-        }
-
         .color_gray {
             color: gray;
         }
 
-        #edit {
-            width: 100%;
-            height: 40px;
-            border: 1px solid #dddddd;
-            border-radius: 7px;
-            padding-left: 5px;
+        .tab {
+            background-color: white;
+            height: 60px;
         }
 
-        .layui-m-layerchild h3 {
-            font-size: 14px !important;
-            height: 20px !important;
-            line-height: 20px !important;
+        .promotionRecords {
+            height: 40px;
+            margin-top: 10px;
+            padding-left: 20%;
+            float: left;
+        }
+
+        .myQRCode {
+            height: 40px;
+            margin-top: 10px;
+            padding-right: 20%;
+            float: right;
+        }
+
+        .line {
+            background: gainsboro;
+            height: 10px;
+            width: 100%;
+            padding: 0px;
+        }
+        
+        .arrows {
+            width: 6px;
         }
 
         .exit {
             padding: 10px;
             border: 0px;
-            margin-top: 10px;
+            margin: 15px;
             background-color: #F24D4D;
             text-align: center;
             font-size: 16px;
@@ -72,126 +118,81 @@
     </style>
 </head>
 <body>
-<div class="container">
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">登录名</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="account"></span></div>
+    <div id="header" class="header">
+        <img src="../../Images/personCenter/backgroundImg.png" style="width: 100%"/>
+        <!--<img src="http://192.168.80.13:1217/Uploads/54e8537d-61df-4c75-b889-66b66c76baba.jpg" class="headerImg" id="headerImg">-->
+        <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTAhA3KbPFFX6zi5VUdY6SDBXOo9y6xyDDzDuD4IMwDRVmZKap0fXUlCRQ" class="headerImg" id="headerImg">
+        <p class="name">名字</p>
+        <p class="integral">积分:无</p>
     </div>
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">修改密码</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="pwd"></span></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-6 tab">
+                <img src="../../Images/personCenter/myQRCode.png" class="myQRCode"/>
+            </div>
+            <div class="col-xs-6 tab">
+                <img src="../../Images/personCenter/promotionRecords.png" class="promotionRecords"/>
+            </div>
+        </div>
     </div>
-    <div class="row pdtb10 border_btm" id="nick">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">学员姓名</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="nickName"></span></div>
+    <div class="line"></div>
+    <div class="container">
+        <div class="row pdtb10 border_btm" id="registerInformation">
+            <div class="col-xs-6 left_field">
+                <span>报名信息</span></div>
+            <div class="col-xs-6 right_field">
+                <img src="../../Images/personCenter/arrows.png" class="arrows"/></div>
+        </div>
+        <div class="row pdtb10 border_btm" id="expensesRecord">
+            <div class="col-xs-6 left_field">
+                <span>消费记录</span></div>
+            <div class="col-xs-6 right_field">
+                <img src="../../Images/personCenter/arrows.png" class="arrows"/></div>
+        </div>
+        <div class="row pdtb10 border_btm">
+            <div class="col-xs-6 left_field">
+                <span>我的推广人</span></div>
+            <div class="col-xs-6 right_field">
+                <span class="color_gray" id="promoter"></span></div>
+        </div>
     </div>
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">性别</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="sex"></span></div>
+    <div class="line"></div>
+    <div class="container">
+        <div class="row pdtb10 border_btm" id="mall">
+            <div class="col-xs-6 left_field">
+                <span>积分商城</span></div>
+            <div class="col-xs-6 right_field">
+                <img src="../../Images/personCenter/arrows.png" class="arrows"/></div>
+        </div>
+        <div class="row pdtb10 border_btm">
+            <div class="col-xs-6 left_field">
+                <span>申请成为摩英达人</span></div>
+            <div class="col-xs-6 right_field">
+                <span class="color_gray" id="talent"></span></div>
+        </div>
     </div>
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">就读学校</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="school"></span></div>
-    </div>
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">年级</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="grade"></span></div>
-    </div>
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">班级</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="className"></span></div>
-    </div>
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">出生日期</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="birthday"></span></div>
-    </div>
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">学员手机</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="phone"></span></div>
-    </div>
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">电子邮件</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="email"></span></div>
-    </div>
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">父亲姓名</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="fatherName"></span></div>
-    </div>
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">父亲手机</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="fatherPhone"></span></div>
-    </div>
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">母亲姓名</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="motherName"></span></div>
-    </div>
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">母亲手机</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="motherPhone"></span></div>
-    </div>
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="display_block">宅电</span></div>
-        <div class="col-xs-9 pr15 pl5 text-right">
-            <span class="color_gray" id="tel"></span></div>
-    </div>
-    <div class="row pdtb10 border_btm">
-        <div class="col-xs-5 pl15 pr5">
-            <span class="display_block">快递地址(详细)</span></div>
-        <div class="col-xs-7 pr15 pl5 text-right">
-            <span class="color_gray" id="address"></span></div>
+    <div class="line"></div>
+    <div class="container">
+        <div class="row pdtb10 border_btm">
+            <div class="col-xs-6 left_field">
+                <span>登录名</span></div>
+            <div class="col-xs-6 right_field">
+                <span class="color_gray" id=""></span></div>
+        </div>
+        <div class="row pdtb10 border_btm" id="changePassword">
+            <div class="col-xs-6 left_field">
+                <span>修改密码</span></div>
+            <div class="col-xs-6 right_field">
+                <img src="../../Images/personCenter/arrows.png" class="arrows"/></div>
+        </div>
     </div>
     <div class="exit" id="exit">退出登录</div>
-</div>
-<!--navbar-fixed-bottom-->
-<div style="height: 60px;width: 100%;"></div>
-<div class="container navbar-fixed-bottom" style="background: #FFF;">
-    <div class="row" style="border-top: 1px solid #EEEEEE;">
-        <div class="col-xs-4" style="height: 50px;line-height: 50px;text-align: center;font-size: 16px;">
-            <a style="color: #000;" href="/Course/Views/Appointment/CourseList.html">课程介绍</a>
-        </div>
-        <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
-            <a style="color: #000;" href="/Course/Views/book/booking.html">我的预约</a>
-        </div>
-        <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
-            <a style="color: #F24C4C;" href="/Course/Views/Account/PersonalCenter.html">个人中心</a>
-        </div>
-    </div>
-</div>
-<script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
-<script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
-<script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
-<script src="../../Framework/layer_mobile/layer.js"></script>
-<script src="../../Scripts/Commen/CourseCommen.js"></script>
-<script src="../../Scripts/Commen/CheckUserLogin.js"></script>
-<script src="../../Scripts/Account/PersonalCenter.js"></script>
+    <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
+    <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
+    <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
+    <script src="../../Framework/layer_mobile/layer.js"></script>
+    <script src="../../Scripts/Commen/CourseCommen.js"></script>
+    <!--<script src="../../Scripts/Commen/CheckUserLogin.js"></script>-->
+    <script src="../../Scripts/Account/PersonalCenter.js"></script>
 </body>
 </html>
