分销系统后台管理界面完成

--- a/Views/Account/ProductList.html
+++ b/Views/Account/ProductList.html
@@ -10,14 +10,31 @@
     <meta charset="UTF-8">
     <title>积分商城</title>
     <style>
+
+        .tab {
+            padding: 5px;
+            background: white;
+            height: 35px;
+            font-size: 16px;
+            text-align: center;
+        }
+
         .list {
             padding: 10px;
         }
+
     </style>
 </head>
 <body>
-    <div></div>
     <div class="container">
+        <div class="row" style="border-bottom: 1px solid #ddd">
+            <div class="col-xs-6 tab">
+                我的订单
+            </div>
+            <div class="col-xs-6 tab">
+                收货地址
+            </div>
+        </div>
         <div class="row" id="product_list">
 
         </div>
