--- a/Views/Order/OrderDetails.html
+++ b/Views/Order/OrderDetails.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
     <title>订单详情</title>
     <style>
+        *{font-size: 13px}
         .imgbg { width: 64px;height: 64px; background: url("../../Images/personCenter/backgroundImg.png") no-repeat center;background-size: cover;}
         .content,.address{position: relative;padding: 15px;background: #EEEEEE;}
         .address{background: #ee4c33;color: #FFFFFF;font-size: 12px;}
@@ -26,43 +27,19 @@
         .nopadding{padding: 0px}
         .pdr15{padding-right: 15px;}
     </style>
+
 </head>
 <body>
 <div class="container">
     <div class="order">
-        <div class="row address" >
-            <div class="left">
-                <img src="../../Images/location.png" height="25" width="20"/>
-            </div>
-            <div class="main">
-                <div class="col-xs-5 text-left nopadding">收货人：网创强</div>
-                <div class="col-xs-7 text-right nopadding pdr15">联系方式：15901857928</div>
-                <div class="col-xs-12 text-left nopadding pdr15">收货地址：上海市浦东新区新金桥路58号8A摩英教育上海市浦东新区新金桥路58号8A摩英教育</div>
-            </div>
-        </div>
-        <div class="row content">
-            <div class="main">
-                <span>能量圈鼠标垫</span>
-                <p>能量圈鼠标垫能量圈鼠标垫能量圈鼠标垫能量圈鼠标垫能量圈鼠标垫能量圈鼠标垫能量圈鼠标垫能量圈鼠标垫</p>
-            </div>
-            <div class="left imgbg" ></div>
-            <div class="right">
-                <span>30000能量币</span>
-                <p style="color: #ff0000;">x 1</p>
-            </div>
-        </div>
-        <div class="row text-right bottom">
-            <div class="col-xs-12"><span>共1件商品 <span style="color: #ff0000;">合计：30000能量币</span></span></div>
-        </div>
-        <div class="row text-right status" style="padding: 10px 0;">
-            <div class="col-xs-12"><button>确认收货</button></div>
-        </div>
-        <div class="row" style="height: 1px;background: #eee"></div>
-        <div class="row logistics">
-            <div class="col-xs-12">订单号：12345678</div>
-            <div class="col-xs-12">物流公司：顺丰速递</div>
-        </div>
+
     </div>
 </div>
+<script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
+<script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
+<script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
+<script src="../../Framework/layer_mobile/layer.js"></script>
+<script src="../../Scripts/Commen/CourseCommen.js"></script>
+<script src="../../Scripts/Order/OrderDetails.js"></script>
 </body>
 </html>
