--- a/Views/Account/ArticleDetials.html
+++ b/Views/Account/ArticleDetials.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
     <meta charset="UTF-8">
-    <title>兑换</title>
+    <title>商品详情</title>
     <style>
 
         .headerImg {
