--- a/Views/Account/PersonalCenter.html
+++ b/Views/Account/PersonalCenter.html
@@ -122,6 +122,7 @@
         <img src="../../Images/personCenter/backgroundImg.png" style="width: 100%"/>
         <!--<img src="http://192.168.80.13:1217/Uploads/54e8537d-61df-4c75-b889-66b66c76baba.jpg" class="headerImg" id="headerImg">-->
         <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTAhA3KbPFFX6zi5VUdY6SDBXOo9y6xyDDzDuD4IMwDRVmZKap0fXUlCRQ" class="headerImg" id="headerImg">
+        <input type="file" style="position:absolute;top:0px;left:0px;opacity:0;width:100%;height: 60%;" id="imageFile" accept="image/*">
         <p class="name">名字</p>
         <p class="integral">积分:无</p>
     </div>
