优化目录结构

--- a/Views/Account/Login.html
+++ b/Views/Account/Login.html
@@ -90,6 +90,6 @@
 <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../Framework/layer_mobile/layer.js"></script>
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
-<script src="../../Scripts/Login.js"></script>
+<script src="../../Scripts/Account/Login.js"></script>
 </body>
 </html>
