--- a/Views/PersonalCenter/Spread.html
+++ b/Views/PersonalCenter/Spread.html
@@ -77,6 +77,6 @@
     <script src="../../Framework/layer_mobile/layer.js"></script>
     <script src="../../Scripts/Commen/CourseCommen.js"></script>
     <!--<script src="../../Scripts/Commen/CheckUserLogin.js"></script>-->
-    <script src="../../Scripts/Account/Spread.js"></script>
+    <script src="../../Scripts/PersonalCenter/Spread.js"></script>
 </body>
 </html>
