--- a/Views/Course/CourseList.html
+++ b/Views/Course/CourseList.html
@@ -5,58 +5,85 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
     <meta name="format-detection" content="telephone=no"/>
     <meta name="format-detection" content="email=no"/>
+    <title>课程介绍</title>
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.css">
-    <title>课程详情</title>
     <style>
-        .CourseDetials_leftImg {
-            border: 0px;
-            padding: 0px;
+
+        .typeButton {
+             height: 40px;
+             font-size: 15px;
+             background-color: #ffffff;
+             margin: 0px;
+             border: 0px;
+             padding: 0px;
+             outline: none;
+             border-bottom: 1px solid #ffffff;
+         }
+
+        .active {
+            border-bottom: 1px solid #ff0000;
         }
-        .pure {
-            padding: 0px;
-            border: 0px;
+
+        .courseTitle {
+            background: transparent;
+            outline: none;
+            border: none;
+            width: 68%;
             margin: 0px;
+            padding: 0px;
+            overflow: hidden;
         }
-        .divide {
-            width: 100%;
-            height: 8px;
-            background-color: #E5E5E5;
+
+        .courseLine_leftImg {
+            float: left;
+            width: 75px;
+            height: 75px;
+            background-size: cover;
         }
+
         .registrationButton {
-            margin-top: 10px;
-            width: 100%;
-            font-size: 16px;
-            height: 40px;
+            width: 30%;
+            font-size: 10px;
+            height: 30px;
             border:0;
             border-radius: 3px;
             background: #F24D4D;
             color: #fff;
             outline: none;
         }
-        #Detials img {
-            width:100%!important;
+
+        .info {
+            overflow: hidden;
+            height: 18px;
+            font-size: 12px;
+            color: #9B9B9B;
         }
     </style>
 </head>
 <body>
 <div>
-    <div id="Detials">
-
+    <img src="../../Images/banner/banner01.png" style="width: 100%"/>
+</div>
+<div class="container">
+    <div class="row" style="border-bottom: 1px solid #dddddd">
+        <button class="col-xs-4 typeButton">课程类型</button>
+        <button class="col-xs-4 typeButton" id="studentButton">学生课程</button>
+        <button class="col-xs-4 typeButton" id="parentsButton">家长课程</button>
     </div>
-    <div style="overflow: auto" id="Teachers">
+</div>
+<div id="StudentList" class="container">
 
-    </div>
-    <div id="Serve">
+</div>
+<div id="ParentsList" class="container">
 
-    </div>
 </div>
 <!--navbar-fixed-bottom-->
 <div style="height: 60px;width: 100%;"></div>
 <div class="container navbar-fixed-bottom" style="background: #FFF;">
     <div class="row" style="border-top: 1px solid #EEEEEE;">
         <div class="col-xs-4" style="height: 50px;line-height: 50px;text-align: center;font-size: 16px;">
-            <a style="color: #000;" href="/Course/Views/Appointment/CourseList.html">课程介绍</a>
+            <a style="color: #F24C4C;" href="/Course/Views/Appointment/CourseList.html">课程介绍</a>
         </div>
         <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
             <a style="color: #000;" href="/Course/Views/book/booking.html">我的预约</a>
@@ -69,9 +96,9 @@
 <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
 <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
-<script src="../../Scripts/Commen/CheckUserLogin.js"></script>
 <script src="../../Framework/layer_mobile/layer.js"></script>
+<script src="../../Scripts/Commen/CheckUserLogin.js"></script>
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
-<script src="../../Scripts/Appointment/CourseDetials.js"></script>
+<script src="../../Scripts/Course/CourseList.js"></script>
 </body>
 </html>
