文件分类整理,添加css文件

--- a/Views/PersonalCenter/ExpensesRecord.html
+++ b/Views/PersonalCenter/ExpensesRecord.html
@@ -7,46 +7,10 @@
     <meta name="format-detection" content="email=no"/>
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../../Css/PersonalCenter/ExpensesRecord.css">
     <meta charset="UTF-8">
     <title>消费记录</title>
-    <style>
 
-        .tab {
-            height: 40px;
-            border-bottom: 1px solid #eee;
-        }
-
-        .tab > div {
-            margin-top: 15px;
-        }
-
-        .tab a {
-            color: #000;
-            font-size: 16px;
-            padding-bottom: 2px;
-            text-decoration: none;
-        }
-
-        .active {
-            color: red !important;
-            border-bottom: 2px solid #ff0000;
-        }
-
-        .record {
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
-            width: 100%;
-            display: block;
-        }
-
-        .btm {
-            height: 50px;
-            padding-top: 5px;
-            border-bottom: 1px solid #EEEEEE;
-        }
-
-    </style>
 </head>
 <body>
     <div class="container" id="consume">
