--- a/Views/PersonalCenter/RegisterInformation.html
+++ b/Views/PersonalCenter/RegisterInformation.html
@@ -8,68 +8,9 @@
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
     <!--<link rel="stylesheet" href="../../Css/Account/Login.css">-->
-
+    <link rel="stylesheet" href="../../Css/PersonalCenter/RegisterInformation.css">
     <title>报名信息</title>
-    <style>
-        .pl5 {
-            padding-left: 5px
-        }
 
-        .pr5 {
-            padding-right: 5px
-        }
-
-        .pl15 {
-            padding-left: 15px;
-        }
-
-        .pr15 {
-            padding-right: 15px;
-        }
-
-        .border_btm {
-            border-bottom: 1px solid #eeeeee;
-        }
-
-        .pdtb10 {
-            padding-top: 10px;
-            padding-bottom: 10px;
-        }
-
-        .display_block {
-            display: block
-        }
-
-        .color_gray {
-            color: gray;
-        }
-
-        #edit {
-            width: 100%;
-            height: 40px;
-            border: 1px solid #dddddd;
-            border-radius: 7px;
-            padding-left: 5px;
-        }
-
-        .layui-m-layerchild h3 {
-            font-size: 14px !important;
-            height: 20px !important;
-            line-height: 20px !important;
-        }
-
-        .exit {
-            padding: 10px;
-            border: 0px;
-            margin-top: 10px;
-            background-color: #F24D4D;
-            text-align: center;
-            font-size: 16px;
-            color: white;
-            border-radius: 5px;
-        }
-
-    </style>
 </head>
 <body>
 <div class="container">
