--- a/Views/Talent/ApplyTalent.html
+++ b/Views/Talent/ApplyTalent.html
@@ -7,67 +7,10 @@
     <meta name="format-detection" content="email=no"/>
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../../Css/Talent/ApplyTalent.css">
     <meta charset="UTF-8">
     <title>摩英达人</title>
-    <style>
 
-        .header {
-            position: relative;
-        }
-
-        .headerImg {
-            position: absolute;
-            top: 20%;
-            left: 50%;
-            margin-left: -40px;
-            width: 80px;
-            height: 80px;
-        }
-
-        .head_field {
-            /*margin-top: -110px;*/
-            position: absolute;
-            top: 55%;
-            left: 50%;
-            margin-left: -56px;
-            color: white;
-            text-align: center;
-            font-size: 16px;
-            margin-bottom: 0px;
-        }
-
-        .apply_field {
-            padding-top: 5px;
-            margin: 0px;
-            color: red;
-            text-align: center;
-            font-size: 14px;
-        }
-
-        .apply_button {
-            padding: 10px;
-            border: 0px;
-            margin-top: 5px;
-            margin-bottom: 10px;
-            margin-left: 25px;
-            margin-right: 25px;
-            background-color: #F24D4D;
-            text-align: center;
-            font-size: 16px;
-            color: white;
-            border-radius: 3px;
-        }
-
-        .rule {
-            width: 100%;
-        }
-
-        .customerService {
-            color: gray;
-            text-align: center;
-        }
-
-    </style>
 </head>
 <body>
     <div id="talent">
