--- a/Views/PersonalCenter/ShippingAddressEdit.html
+++ b/Views/PersonalCenter/ShippingAddressEdit.html
@@ -7,69 +7,10 @@
     <meta name="format-detection" content="email=no"/>
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../../Css/PersonalCenter/ShippingAddressEdit.css">
     <meta charset="UTF-8">
     <title>新增收货地址</title>
-    <style>
 
-        .border_btm {
-            border-bottom: 1px solid #eeeeee;
-        }
-
-        .border_10btm {
-            border-bottom: 10px solid #eeeeee;
-        }
-
-        .pdtb10 {
-            padding-top: 10px;
-            padding-bottom: 10px;
-        }
-
-        .left_field {
-            display: block;
-            padding-left: 15px;
-            padding-right: 5px;
-        }
-
-        .right_field {
-            padding-left: 5px;
-            padding-right: 15px;
-            text-align: right;
-        }
-
-        .right_input {
-            outline: none;
-            padding: 0px;
-            border: 0px;
-        }
-
-        .right_textarea {
-            outline: none;
-            padding: 0px;
-            border: 0px;
-            width: 100%;
-            resize: none;
-            /*border: 1px solid #EEEEEE;*/
-        }
-
-        .default_address {
-            width:100%;
-            text-align: right;
-            padding-left: 15px!important;
-            padding-right: 15px
-        }
-
-        .address_add {
-            padding: 10px;
-            border: 0px;
-            margin: 15px;
-            background-color: #F24D4D;
-            text-align: center;
-            font-size: 16px;
-            color: white;
-            border-radius: 3px;
-        }
-
-    </style>
 </head>
 <body>
     <div class="container">
