--- a/Views/Product/Exchange.html
+++ b/Views/Product/Exchange.html
@@ -7,114 +7,10 @@
     <meta name="format-detection" content="email=no"/>
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../../Css/Product/Exchange.css">
     <meta charset="UTF-8">
     <title>兑换</title>
-    <style>
 
-        * {
-            margin:0;
-            padding:0;
-        }
-
-        .content{
-            position: relative;
-            padding: 15px;
-            background: #EEEEEE;
-            font-size: 14px;
-        }
-
-        .leftImg {
-            float: left;
-            width: 64px;
-            height: 64px;
-        }
-
-        .goodsNum {
-            outline: none;
-            border: 1px solid #2aabd2;
-            width: 20px;
-            height: 20px;
-        }
-
-        .price {
-            height: 35px;
-            padding-top:5px;
-            clear: both;
-            border-bottom: 1px solid #EEEEEE;
-        }
-
-        .main {
-            position:absolute;
-            left:85px;
-            right:115px
-        }/*绝对定位，使content不占据html文档流空间，让后面的left,right浮上去*/
-
-        .main >p{
-            height: 38px;
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 2;
-            text-overflow: ellipsis;
-            white-space: normal;
-            color: #808080;
-        }
-
-        .left {
-            width:64px;
-            float:left;
-        }
-
-        .right {
-            width: 100px;
-            float:right;
-            font-size: 12px;
-        }
-
-        .address {
-            position: absolute;
-            left: 40px;
-            right: 15px;
-        }
-
-        .address_content {
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
-            width: 100%;
-            float: left;
-            padding-top: 5px
-        }
-
-        .exchange {
-            padding: 10px;
-            border: 0px;
-            margin: 15px;
-            background-color: #F24D4D;
-            text-align: center;
-            font-size: 16px;
-            color: white;
-            border-radius: 3px;
-        }
-
-        .frame_radio {
-            border-bottom: 1px solid #EEEEEE;
-            padding: 0px;
-        }
-
-        .content_radio {
-            height: 55px;
-            border-bottom: 1px solid #EEEEEE;
-            padding-left: 10px
-        }
-
-        .noAddress {
-            width: 100%;
-            height: 100px;
-            /*background-color: red;*/
-        }
-
-    </style>
 </head>
 <body>
     <div id="article_detials">
