--- a/Views/Product/ProductDetials.html
+++ b/Views/Product/ProductDetials.html
@@ -7,62 +7,10 @@
     <meta name="format-detection" content="email=no"/>
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../../Css/Product/ProductDetials.css">
     <meta charset="UTF-8">
     <title>商品详情</title>
-    <style>
 
-        .headerImg {
-            width: 100%;
-        }
-
-        .tab {
-            padding: 0px;
-            background: white;
-            height: 45px;
-        }
-
-        .productName {
-            padding-top: 10px;
-            padding-left: 10px;
-            font-size: 18px;
-            text-align: left;
-            color: black;
-        }
-
-        .repertory {
-            margin: 0px;
-            padding-left: 10px;
-            font-size: 12px;
-            color: #F24C4C;
-        }
-
-        .price {
-            padding-top: 10px;
-            padding-right: 10px;
-            font-size: 18px;
-            text-align: right;
-            color: #F24C4C;
-        }
-
-        .line {
-            background: gainsboro;
-            height: 10px;
-            width: 100%;
-            padding: 0px;
-        }
-
-        .exit {
-            padding: 10px;
-            border: 0px;
-            margin: 15px;
-            background-color: #F24D4D;
-            text-align: center;
-            font-size: 16px;
-            color: white;
-            border-radius: 3px;
-        }
-
-    </style>
 </head>
 <body>
     <div id="article_detials">
