优化目录结构

--- a/Views/Product/ProductDetials.html
+++ b/Views/Product/ProductDetials.html
@@ -39,7 +39,7 @@
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../Framework/layer_mobile/layer.js"></script>
     <script src="../../Scripts/Commen/CourseCommen.js"></script>
-    <!--<script src="../../Scripts/Commen/CheckUserLogin.js"></script>-->
+    <script src="../../Scripts/Commen/CheckUserLogin.js"></script>
     <script src="../../Scripts/Product/ProductDetials.js"></script>
 </body>
 </html>
