--- a/Views/Product/ProductList.html
+++ b/Views/Product/ProductList.html
@@ -44,7 +44,7 @@
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../Framework/layer_mobile/layer.js"></script>
     <script src="../../Scripts/Commen/CourseCommen.js"></script>
-    <!--<script src="../../Scripts/Commen/CheckUserLogin.js"></script>-->
+    <script src="../../Scripts/Commen/CheckUserLogin.js"></script>
     <script src="../../Scripts/Product/ProductList.js"></script>
 </body>
 </html>
