--- a/Views/PersonalCenter/ExpensesRecord.html
+++ b/Views/PersonalCenter/ExpensesRecord.html
@@ -29,7 +29,7 @@
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../Framework/layer_mobile/layer.js"></script>
     <script src="../../Scripts/Commen/CourseCommen.js"></script>
-    <!--<script src="../../Scripts/Commen/CheckUserLogin.js"></script>-->
+    <script src="../../Scripts/Commen/CheckUserLogin.js"></script>
     <script src="../../Scripts/PersonalCenter/ExpensesRecord.js"></script>
 </body>
 </html>
