--- a/Views/PersonalCenter/PersonalCenter.html
+++ b/Views/PersonalCenter/PersonalCenter.html
@@ -87,7 +87,7 @@
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../Framework/layer_mobile/layer.js"></script>
     <script src="../../Scripts/Commen/CourseCommen.js"></script>
-    <!--<script src="../../Scripts/Commen/CheckUserLogin.js"></script>-->
+    <script src="../../Scripts/Commen/CheckUserLogin.js"></script>
     <script src="../../Scripts/PersonalCenter/PersonalCenter.js"></script>
 </body>
 </html>
