--- a/Views/PersonalCenter/ShippingAddressEdit.html
+++ b/Views/PersonalCenter/ShippingAddressEdit.html
@@ -55,7 +55,7 @@
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../Framework/layer_mobile/layer.js"></script>
     <script src="../../Scripts/Commen/CourseCommen.js"></script>
-    <!--<script src="../../Scripts/Commen/CheckUserLogin.js"></script>-->
+    <script src="../../Scripts/Commen/CheckUserLogin.js"></script>
     <script src="../../Scripts/PersonalCenter/ShippingAddressEdit.js"></script>
 </body>
 </html>
