--- a/Views/PersonalCenter/Spread.html
+++ b/Views/PersonalCenter/Spread.html
@@ -28,7 +28,7 @@
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../Framework/layer_mobile/layer.js"></script>
     <script src="../../Scripts/Commen/CourseCommen.js"></script>
-    <!--<script src="../../Scripts/Commen/CheckUserLogin.js"></script>-->
+    <script src="../../Scripts/Commen/CheckUserLogin.js"></script>
     <script src="../../Scripts/PersonalCenter/Spread.js"></script>
 </body>
 </html>
