--- a/Views/Product/Exchange.html
+++ b/Views/Product/Exchange.html
@@ -53,7 +53,7 @@
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../Framework/layer_mobile/layer.js"></script>
     <script src="../../Scripts/Commen/CourseCommen.js"></script>
-    <!--<script src="../../Scripts/Commen/CheckUserLogin.js"></script>-->
+    <script src="../../Scripts/Commen/CheckUserLogin.js"></script>
     <script src="../../Scripts/Product/Exchange.js"></script>
 
 </body>
