--- a/Views/transfer/transfer.html
+++ b/Views/transfer/transfer.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../../Css/transfer/transfer.css">
     <link rel="stylesheet" type="text/css" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <title>转期课程</title>
+
 </head>
 <style type="text/css">
     body {
@@ -46,6 +47,7 @@
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.js"></script>
 <script src="../../Framework/layer_mobile/layer.js"></script>
+<script src="../../Scripts/Commen/CheckUserLogin.js"></script>
 <script src="../../Scripts/transfer/transfer.js"></script>
 
 </body>
