--- a/Views/PersonalCenter/PersonalCenter.html
+++ b/Views/PersonalCenter/PersonalCenter.html
@@ -23,7 +23,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-xs-6 tab">
+        <div class="col-xs-6 tab" id="myQRCode">
             <img src="../../Images/personCenter/myQRCode.png" class="myQRCode"/>
         </div>
         <div class="col-xs-6 tab">
@@ -72,7 +72,7 @@
             <div class="col-xs-6 left_field">
                 <span>申请成为摩英达人</span></div>
             <div class="col-xs-6 right_field">
-                <span class="color_gray" id="talent"></span></div>
+                <img src="../../Images/personCenter/arrows.png" class="arrows"/></div>
         </a>
     </div>
 </div>
