--- a/Views/PersonalCenter/MyQRCode.html
+++ b/Views/PersonalCenter/MyQRCode.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col-xs-12 text-center pd40" style="height: 25px">我的专属二维码</div>
         <div class="col-xs-12 text-center pd40">
-            <img class="imgLogo" src="../../../Images/xiaohuihui.jpg">
+            <img class="imgLogo" src="../../../Images/defaultphoto.jpg">
             <div class="qrcode" id="qrcode"></div>
         </div>
 
