--- a/Views/Order/MyOrderList.html
+++ b/Views/Order/MyOrderList.html
@@ -49,7 +49,7 @@
 
     </div>
     <div class="row addbtn">
-        <div class="col-xs-12 text-center"><button class="" style="width: 60%">新增地址</button></div>
+        <div class="col-xs-12 text-center"><button class="" style="width: 60%" onclick="AddressEdit(0)">新增地址</button></div>
     </div>
 </div>
 
