--- a/Views/Product/ProductList.html
+++ b/Views/Product/ProductList.html
@@ -16,11 +16,7 @@
         .tab > div{ margin-top:15px; }
 
         .tab a{ color:#000; font-size:16px; padding-bottom:2px; text-decoration:none; }
-
-        .list{
-            padding:10px;
-        }
-
+        #product_list >.list{padding:10px;height:200px;}
     </style>
 </head>
 <body>
