--- a/Views/Talent/ApplyTalent.html
+++ b/Views/Talent/ApplyTalent.html
@@ -21,7 +21,7 @@
         </div>
         <div class="text-center">
             <p class="apply_field" id="unStandard">未达到申请条件</p>
-            <button class="apply_button" id="apply" onclick="Able_Apply()" disabled>申请成为摩英达人</button>
+            <button class="apply_button" id="apply" onclick="Able_Apply()">申请成为摩英达人</button>
             <!--<button class="apply_button">申请成为摩英达人</button>-->
             <button class="rule"onclick="window.location.href='TalentRule.html'">规则说明></button>
             <p class="customerService">客服电话:***********</p>
