--- a/Views/Admin/Commen/header.html
+++ b/Views/Admin/Commen/header.html
@@ -17,6 +17,8 @@
                 <li><a href="/Course/Views/Admin/CourseType/CourseTypeList.html">课程类型管理</a></li>
                 <li><a href="/Course/Views/Admin/Teacher/TeacherList.html">教师管理</a></li>
                 <li><a href="/Course/Views/Admin/User/UserList.html">学员管理</a></li>
+                <li><a href="/Course/Views/Admin/store/ProductList.html">商品管理</a></li>
+                <li><a href="/Course/Views/Admin/store/OrderList.html">订单管理</a></li>
                 <!--<li><a href="/Course/Views/Admin/User/UserList.html">教师管理</a></li>-->
                 <!--<li class="dropdown">-->
                 <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
@@ -31,6 +33,7 @@
                 <!--</li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li><a href="/Course/Views/Admin/store/SysConfigList.html">系统配置</a></li>
                 <li id="Manage_Quit"><a>注销登录</a></li>
             </ul>
         </div>
