--- a/Views/Talent/ApplyTalent.html
+++ b/Views/Talent/ApplyTalent.html
@@ -24,7 +24,7 @@
             <button class="apply_button" id="apply" onclick="Able_Apply()">申请成为摩英达人</button>
             <!--<button class="apply_button">申请成为摩英达人</button>-->
             <button class="rule"onclick="window.location.href='TalentRule.html'">规则说明></button>
-            <p class="customerService">客服电话:***********</p>
+            <p class="customerService">客服电话:400-800-6258</p>
         </div>
     </div>
     <div id="becomeTalent" hidden>
