--- a/Views/Admin/Store/SysConfigList.html
+++ b/Views/Admin/Store/SysConfigList.html
@@ -15,9 +15,7 @@
             <div class="col-xs-6 text-left">
                 <h4><strong>系统配置</strong></h4>
             </div>
-            <div class="col-xs-6 text-right">
-                <input type="text" class="input" style="width: 60%" id="SearchKey" placeholder="请输入搜索关键字"/>
-                <button class="button70X30" id="btnSearch">搜 索</button>
+            <div class="col-xs-6 text-right">e
                 <button class="button70X30" id="btnAdd" onclick="window.location.href = 'SysConfigEdit.html'">新 增</button>
             </div>
         </div>
