--- a/Views/PersonalCenter/MyQRCode.html
+++ b/Views/PersonalCenter/MyQRCode.html
@@ -21,12 +21,12 @@
             <div class="qrcode" id="qrcode"></div>
         </div>
 
-        <div class="col-xs-6 text-left" style="padding:10px 0 0 40px;color: #4A90E2;">
+        <div class="col-xs-12 text-right" style="padding:10px 0 0 40px;color: #4A90E2;">
             <a href="#" id="down" download="">保存图片</a>
         </div>
-        <div class="col-xs-6 text-right" style="padding:10px 40px 0px 0px;color: #4A90E2;">
-            <span>分享二维码</span>
-        </div>
+        <!--<div class="col-xs-6 text-right" style="padding:10px 40px 0px 0px;color: #4A90E2;">-->
+            <!--<span id="share">分享二维码</span>-->
+        <!--</div>-->
     </div>
 </div>
 <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
