--- a/Views/Product/ProductList.html
+++ b/Views/Product/ProductList.html
@@ -16,7 +16,7 @@
         .tab > div{ margin-top:15px; }
 
         .tab a{ color:#000; font-size:16px; padding-bottom:2px; text-decoration:none; }
-        #product_list >.list{padding:10px;height:200px;}
+        #product_list >.list{padding:10px;}
     </style>
 </head>
 <body>
