准备修改二维码页面

--- a/Views/PersonalCenter/MyQRCode.html
+++ b/Views/PersonalCenter/MyQRCode.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col-xs-12 text-center pd40" style="height: 25px">我的专属二维码</div>
         <div class="col-xs-12 text-center pd40">
-            <img class="imgLogo" src="../../../Images/xiaohuihui.jpg">
+            <img class="imgLogo" src="http://192.168.80.13:1217/Uploads/e37c67f1-ca0d-458b-8f74-1c7478acc979.jpg">
             <div class="qrcode" id="qrcode"></div>
         </div>
 
@@ -35,7 +35,7 @@
 <script src="../../Framework/layer_mobile/layer.js"></script>
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../Framework/qrcodejs/jqueryqr.js"></script>
-<script src="../../Framework/qrcodejs/qrcode.js"></script>
+<script src="../../Framework/qrcodejs/qrcode2.js"></script>
 <script src="../../Scripts/PersonalCenter/MyQRCode.js"></script>
 </body>
 </html>
