--- a/Views/PersonalCenter/PersonalCenter.html
+++ b/Views/PersonalCenter/PersonalCenter.html
@@ -16,8 +16,7 @@
     <img src="../../Images/personCenter/backgroundImg.png" style="width: 100%"/>
     <!--<img src="http://192.168.80.13:1217/Uploads/54e8537d-61df-4c75-b889-66b66c76baba.jpg" class="headerImg" id="headerImg">-->
     <img src="../../Images/defaultphoto.jpg" class="headerImg" id="headerImg">
-    <input type="file" style="position:absolute;top:0px;left:0px;opacity:0;width:100%;height: 60%;" id="imageFile"
-           accept="image/*">
+    <input type="file" style="position:absolute;top:0px;left:0px;opacity:0;width:100%;height: 60%;" id="imageFile" accept="image/*">
     <p class="name">名字</p>
     <p class="integral">积分:无</p>
 </div>
