修改bug,二维码图片，商品列表链接

--- a/Views/Order/MyOrderList.html
+++ b/Views/Order/MyOrderList.html
@@ -38,8 +38,10 @@
 <body>
 <div class="container">
     <div class="row tab">
-        <div class="col-xs-6 text-center" style="padding-right: 0"><a href="#" class="active" id="order_list">我的订单</a></div>
-        <div class="col-xs-6 text-center" style="padding-left: 0"><a href="#" class="" id="da_list">收货地址</a></div>
+        <div class="col-xs-4 text-center" style="padding-right: 0">
+            <a href="../Product/ProductList.html" class="active" id="p_list">商品列表</a></div>
+        <div class="col-xs-4 text-center" style="padding-right: 0;padding-left: 0"><a href="#" class="active" id="order_list">我的订单</a></div>
+        <div class="col-xs-4 text-center" style="padding-left: 0"><a href="#" class="" id="da_list">收货地址</a></div>
     </div>
     <div class="order_list">
 
