--- a/Views/Account/Register.html
+++ b/Views/Account/Register.html
@@ -89,15 +89,15 @@
         <div class="col-xs-12">
             <input type="text" id="Phone" name="Phone" autocomplete="off" placeholder="请输入手机号码"/></div>
     </div>
-    <div class="row pdtb15">
-        <div class="col-xs-8 pl15 pr5">
-            <input type="text" id="QrCode" name="QrCode" placeholder="请输入右边图形验证码"/></div>
-        <div class="col-xs-4 pr15 pl5">
-            <canvas class="J_codeimg" style="width: 100%;height: 40px;" id="myCanvas" onclick="createCode()">
-                对不起，您的浏览器不支持canvas，请下载最新版浏览器!
-            </canvas>
-        </div>
-    </div>
+    <!--<div class="row pdtb15">-->
+        <!--<div class="col-xs-8 pl15 pr5">-->
+            <!--<input type="text" id="QrCode" name="QrCode" placeholder="请输入右边图形验证码"/></div>-->
+        <!--<div class="col-xs-4 pr15 pl5">-->
+            <!--<canvas class="J_codeimg" style="width: 100%;height: 40px;" id="myCanvas" onclick="createCode()">-->
+                <!--对不起，您的浏览器不支持canvas，请下载最新版浏览器!-->
+            <!--</canvas>-->
+        <!--</div>-->
+    <!--</div>-->
     <div class="row pdtb15">
         <div class="col-xs-7 pr15">
             <input type="text" id="VerificationCode" name="VerificationCode" autocomplete="off" placeholder="请输入验证码"/></div>
