底部导航，登录背景

--- a/Views/PersonalCenter/ExpensesRecord.html
+++ b/Views/PersonalCenter/ExpensesRecord.html
@@ -14,15 +14,7 @@
 </head>
 <body>
     <div class="container" id="consume">
-        <!--<div class="row btm">-->
-            <!--<div class="col-xs-8" style="padding-left: 10px">-->
-                <!--<span class="record">阿萨德科技风比较大撒房间卡不到十分健康比对方即可不打算考几分把速度快解放</span>-->
-                <!--<span style="color: grey">2016.01.01</span>-->
-            <!--</div>-->
-            <!--<div class="col-xs-4" style="text-align: right;padding-left: 0px;padding-top: 10px;color: red">-->
-                <!-- -20000能量币-->
-            <!--</div>-->
-        <!--</div>-->
+        <div class="text-center" style="margin-top: 40%;font-size: 16px;">暂无消费记录</div>
     </div>
     <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
     <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
