--- a/Views/Order/MyOrderList.html
+++ b/Views/Order/MyOrderList.html
@@ -39,12 +39,12 @@
 <div class="container">
     <div class="row tab">
         <div class="col-xs-4 text-center" style="padding-right: 0">
-            <a href="../Product/ProductList.html" class="active" id="p_list">商品列表</a></div>
+            <a href="../Product/ProductList.html" id="p_list">商品列表</a></div>
         <div class="col-xs-4 text-center" style="padding-right: 0;padding-left: 0"><a href="#" class="active" id="order_list">我的订单</a></div>
         <div class="col-xs-4 text-center" style="padding-left: 0"><a href="#" class="" id="da_list">收货地址</a></div>
     </div>
     <div class="order_list">
-
+        <div class="text-center" style="margin-top: 40%;font-size: 16px;">暂无订单信息</div>
     </div>
 
     <div class="da_list">
@@ -54,6 +54,7 @@
         <div class="col-xs-12 text-center"><button class="" style="width: 60%" onclick="AddressEdit(0)">新增地址</button></div>
     </div>
 </div>
+<div></div>
 <div style="height: 60px;width: 100%;"></div>
 <div class="container navbar-fixed-bottom" style="background: #FFF;">
     <div class="row" style="border-top: 1px solid #EEEEEE;">
@@ -73,6 +74,7 @@
 <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../Framework/layer_mobile/layer.js"></script>
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
+<script src="../../Scripts/Commen/CheckUserLogin.js"></script>
 <script src="../../Scripts/Order/MyOrderList.js"></script>
 </body>
 </html>
